[package]
name = "glpk-rust"
version = "0.1.12"
edition = "2021"
license = "GPL-3.0"
description = "Rust wrapper for GLPK (GNU Linear Programming Kit) with static linking"
repository = "https://github.com/ourstudio-se/glpk-rust"
keywords = ["optimization", "linear-programming", "glpk", "integer-programming"]
categories = ["mathematics", "science"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
num_cpus = "1.16"
pkg-config = "0.3"
cmake = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
